<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ltree.com.expenses.ExpenseEntryActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expEdt_str_date"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:id="@+id/expEdt_et_date"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:cursorVisible="false"
        android:focusable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expEdt_str_description"
        android:id="@+id/textView2"
        android:layout_below="@+id/expEdt_et_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/expEdt_et_description"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:lines="1"
        android:gravity="top|left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expEdt_str_amount"
        android:id="@+id/textView3"
        android:layout_below="@+id/expEdt_et_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/expEdt_et_amount"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/expEdt_im_receipt"
        android:layout_below="@+id/expEdt_et_amount"/>
<!-- LAT LON -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/expEdt_str_lat"
        android:layout_below="@+id/expEdt_im_receipt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/expEdt_et_lat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:digits="8"
        android:text=""
        android:layout_below="@+id/expEdt_et_amount"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="8"
        android:text="@string/expEdt_str_lon"
        android:layout_alignTop="@+id/expEdt_et_lon"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/expEdt_et_lon"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_alignTop="@+id/expEdt_et_lat"
        android:layout_alignRight="@+id/expEdt_et_amount"
        android:layout_alignEnd="@+id/expEdt_et_amount" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:id="@+id/expEdt_ib_receipt"
        android:text="@string/expEdt_str_camera"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_camera"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:text="@string/expEdt_str_save"
        android:id="@+id/expEdt_bt_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expEdt_str_fix"
        android:id="@+id/expEdt_bt_fix"
        android:layout_below="@+id/expEdt_et_lat"
        android:layout_toRightOf="@+id/expEdt_im_receipt"
        android:layout_toEndOf="@+id/expEdt_im_receipt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expEdt_str_map"
        android:id="@+id/expEdt_bt_map"
        android:layout_alignTop="@+id/expEdt_bt_fix"
        android:layout_alignRight="@+id/expEdt_et_lon"
        android:layout_alignEnd="@+id/expEdt_et_lon" />


</RelativeLayout>
